# rag-intro

./: .gitignore  main.py  pyproject.toml
notebook/: document.ipynb  pdf_RAG.ipynb  python.ipynb
